<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/editOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origin" />
    <EditText
        android:id="@+id/editDest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/linearlayout"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFindPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findpath" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/withImage"
            android:layout_height="@dimen/heightImage"
            android:src="@drawable/ic_distance"
            android:paddingLeft="@dimen/paddingleftImageDistance"
            android:paddingBottom="@dimen/paddingBottomImage"
            />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/textviewPaddingLeft"
            android:text="@string/distance" />

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="@dimen/withImage"
            android:layout_height="@dimen/heightImage"
            android:paddingLeft="@dimen/paddingLeftClock"
            android:paddingBottom="@dimen/paddingBottomImage"
            android:src="@drawable/ic_clock" />
        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/textviewPaddingLeft"
            android:text="@string/duration" />
        </LinearLayout>
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
        <Button
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historymap"
            android:layout_gravity="center"/>
    </LinearLayout>
    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightfragment"
            />
    </FrameLayout>
</LinearLayout>


